--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -143,7 +143,7 @@
   year = {2019},
   accessDate = {2025-01-04 22:19:24},
 }
-@journalArticle{khaldiOverviewSwarmRobotics2015a,
+@journalArticle{khaldiOverviewSwarmRobotics2015,
   date = {2015-09-17 2015-09-17},
   publicationTitle = {International Journal of Computer Applications},
   issue = {2},
@@ -171,4 +171,115 @@
   author = {Saxena, Ashutosh and Chung, Sung H and Ng, Andrew Y},
   language = {en},
   libraryCatalog = {Zotero},
+}
+@journalArticle{tanSwarmRoboticsCollective2013,
+  key = {GLFLXVWD},
+  title = {Swarm Robotics: Collective Behavior Inspired by Nature},
+  url = {https://www.hilarispublisher.com/open-access/swarm-robotics-collective-behavior-inspired-by-nature-jcsb.1000e106.pdf},
+  DOI = {10.4172/jcsb.1000e106},
+  volume = {6},
+  year = {2013},
+  ISSN = {0974-7230},
+  publicationTitle = {Journal of Computer Science & Systems Biology},
+  date = {2013-00-00 2013},
+  author = {Tan, Ying},
+  language = {en},
+  libraryCatalog = {Zotero},
+}
+@journalArticle{sharkeySwarmRoboticsMinimalism2007,
+  key = {7U4USFRL},
+  title = {Swarm robotics and minimalism},
+  DOI = {10.1080/09540090701584970},
+  year = {2007},
+  pages = {245-260},
+  issue = {3},
+  libraryCatalog = {DOI.org (Crossref)},
+  date = {2007-09-00 2007-09},
+  url = {https://www.tandfonline.com/doi/full/10.1080/09540090701584970},
+  journalAbbreviation = {Connection Science},
+  volume = {19},
+  author = {Sharkey, Amanda J. C.},
+  language = {en},
+  ISSN = {0954-0091, 1360-0494},
+  publicationTitle = {Connection Science},
+  accessDate = {2025-02-04 02:13:30},
+}
+@bookSection{beniSwarmIntelligenceCellular1993,
+  key = {22EJZYDL},
+  title = {Swarm Intelligence in Cellular Robotic Systems},
+  extra = {DOI: 10.1007/978-3-642-58069-7_38},
+  place = {Berlin, Heidelberg},
+  year = {1993},
+  pages = {703-712},
+  abstractNote = {Cellular Robotic Systems are capable of 'intelligent' behavior. The meaning of this intelligence is analyzed in the paper. We define robot intelligence and robot system intelligence in terms of unpredictability of improbable behavior. The concept of unpredictability is analyzed in relation to (1) statistical unpredictability, (2) inaccessibility, (3) undecidability, (4) intractability, and (5) non-representability. We argue that the latter two type of unpredictability, when exhibited by systems capable of producing order, can result in a non-trivial, different form of intelligent behavior (Swarm Intelligence). Engineering problems related to Swarm Intelligence are mentioned in relation to Cellular Robotic Systems which consist of collections of autonomous, non-synchronized, non-. intelligent robots cooperating to achieve global tasks.},
+  publisher = {Springer Berlin Heidelberg},
+  rights = {http://www.springer.com/tdm},
+  libraryCatalog = {DOI.org (Crossref)},
+  date = {1993-00-00 1993},
+  url = {http://link.springer.com/10.1007/978-3-642-58069-7_38},
+  bookTitle = {Robots and Biological Systems: Towards a New Bionics?},
+  author = {Dario, Paolo and Sandini, Giulio and Aebischer, Patrick and Beni, Gerardo and Wang, Jing},
+  ISBN = {978-3-642-63461-1 978-3-642-58069-7},
+  language = {en},
+  accessDate = {2025-02-04 02:24:35},
+}
+@thesis{ferranteControlArchitectureHeterogeneous2009,
+  key = {YR4DAQKC},
+  title = {A Control Architecture for a Heterogeneous Swarm of Robots},
+  url = {https://iridia.ulb.ac.be/~mdorigo/HomePageDorigo/thesis/dea/FerranteMAS.pdf},
+  year = {2009},
+  thesisType = {PhD Thesis},
+  date = {2009-00-00 2009},
+  university = {UNIVERSIT ´E LIBRE DE BRUXELLES},
+  abstractNote = {We propose a software architecture that can ease and speed up the development process of controllers for heterogeneous swarm systems. It is inherently modular and allows behaviors to be combined in layers and reused in multiple controllers. This can potentially speedup the development process of controllers since they become much more readable and well structured. We validated the architecture through an experiment of collective navigation and obstacle avoidance using two different types of robots. The experiments show that, using the proposed architecture, complex behaviors can indeed be built through the combination of very simple behaviors.},
+  author = {Ferrante, Eliseo},
+  language = {en},
+  libraryCatalog = {Zotero},
+}
+@bookSection{yangSwarmBasedMetaheuristicAlgorithms2012,
+  year = {2012},
+  key = {XQTTDU6G},
+  title = {Swarm-Based Metaheuristic Algorithms and No-Free-Lunch Theorems},
+  url = {http://www.intechopen.com/books/theory-and-new-applications-of-swarm-intelligence/swarm-based-metaheuristic-algorithms-and-no-free-lunch-theorems},
+  bookTitle = {Theory and New Applications of Swarm Intelligence},
+  ISBN = {978-953-51-0364-6},
+  publisher = {InTech},
+  extra = {DOI: 10.5772/30852},
+  date = {2012-03-16 2012-03-16},
+  author = {Parpinelli, Rafael and Yang, Xin-She},
+  language = {en},
+  libraryCatalog = {DOI.org (Crossref)},
+  accessDate = {2025-02-04 16:13:53},
+}
+@journalArticle{neshatArtificialFishSwarm2014,
+  key = {KT57PTXC},
+  title = {Artificial fish swarm algorithm: a survey of the state-of-the-art, hybridization, combinatorial and indicative applications},
+  DOI = {10.1007/s10462-012-9342-2},
+  year = {2014},
+  pages = {965-997},
+  abstractNote = {AFSA (artiﬁcial ﬁsh-swarm algorithm) is one of the best methods of optimization among the swarm intelligence algorithms. This algorithm is inspired by the collective movement of the ﬁsh and their various social behaviors. Based on a series of instinctive behaviors, the ﬁsh always try to maintain their colonies and accordingly demonstrate intelligent behaviors. Searching for food, immigration and dealing with dangers all happen in a social form and interactions between all ﬁsh in a group will result in an intelligent social behavior. This algorithm has many advantages including high convergence speed, ﬂexibility, fault tolerance and high accuracy. This paper is a review of AFSA algorithm and describes the evolution of this algorithm along with all improvements, its combination with various methods as well as its applications. There are many optimization methods which have a afﬁnity with this method and the result of this combination will improve the performance of this method. Its disadvantages include high time complexity, lack of balance between global and local search, in addition to lack of beneﬁting from the experiences of group members for the next movements.},
+  issue = {4},
+  rights = {http://www.springer.com/tdm},
+  libraryCatalog = {DOI.org (Crossref)},
+  date = {2014-12-00 2014-12},
+  url = {http://link.springer.com/10.1007/s10462-012-9342-2},
+  shortTitle = {Artificial fish swarm algorithm},
+  journalAbbreviation = {Artif Intell Rev},
+  publicationTitle = {Artificial Intelligence Review},
+  author = {Neshat, Mehdi and Sepidnam, Ghodrat and Sargolzaei, Mehdi and Toosi, Adel Najaran},
+  language = {en},
+  ISSN = {0269-2821, 1573-7462},
+  volume = {42},
+  accessDate = {2025-02-04 16:17:54},
+}
+@journalArticle{hamdiBeebasedAlgorithmsReview2010,
+  year = {2010},
+  date = {2010-10-00 10-2010},
+  language = {en},
+  libraryCatalog = {Zotero},
+  pages = {2},
+  title = {Bee-based algorithms: a review},
+  key = {UA542PLJ},
+  author = {Hamdi, A and Monmarché, N and Alimi, M Adel and Slimane, M},
+  url = {https://www.researchgate.net/profile/Amira-Hamdi/publication/237844606_META10_Bee-based_algorithms_a_review_META_2010/links/0046351be9feb2e247000000/META10-Bee-based-algorithms-a-review-META-2010.pdf},
 }
