--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -283,3 +283,116 @@
   author = {Hamdi, A and Monmarché, N and Alimi, M Adel and Slimane, M},
   url = {https://www.researchgate.net/profile/Amira-Hamdi/publication/237844606_META10_Bee-based_algorithms_a_review_META_2010/links/0046351be9feb2e247000000/META10-Bee-based-algorithms-a-review-META-2010.pdf},
 }
+@book{sahinSwarmRoboticsSAB2005,
+  seriesNumber = {3342},
+  author = {Şahin, Erol and Spears, William M.},
+  series = {Lecture notes in computer science, State-of-the-art survey},
+  publisher = {Springer},
+  ISBN = {978-3-540-24296-3},
+  shortTitle = {Swarm robotics},
+  language = {en},
+  libraryCatalog = {Library of Congress ISBN},
+  year = {2005},
+  numPages = {174},
+  key = {HNUULXXY},
+  extra = {Meeting Name: International Conference on Simulation of Adaptive Behavior
+OCLC: ocm57597119},
+  callNumber = {TJ210.3 .I633 2004},
+  date = {2005-00-00 2005},
+  place = {Berlin ; New York},
+  title = {Swarm robotics: SAB 2004 international workshop, Santa Monica, CA, USA, July 17, 2004: revised selected papers},
+}
+@journalArticle{dorigoEvolvingSelfOrganizingBehaviors2004,
+  url = {http://link.springer.com/10.1023/B:AURO.0000033973.24945.f3},
+  author = {Dorigo, Marco and Trianni, Vito and Şahin, Erol and Groß, Roderich and Labella, Thomas H. and Baldassarre, Gianluca and Nolfi, Stefano and Deneubourg, Jean-Louis and Mondada, Francesco and Floreano, Dario and Gambardella, Luca M.},
+  accessDate = {2025-02-04 20:55:06},
+  key = {XDTAB9H8},
+  volume = {17},
+  publicationTitle = {Autonomous Robots},
+  issue = {2/3},
+  ISSN = {0929-5593},
+  language = {en},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {223-245},
+  DOI = {10.1023/B:AURO.0000033973.24945.f3},
+  abstractNote = {In this paper, we introduce a self-assembling and self-organizing artifact, called a swarm-bot, composed of a swarm of s-bots, mobile robots with the ability to connect to and to disconnect from each other. We discuss the challenges involved in controlling a swarm-bot and address the problem of synthesizing controllers for the swarm-bot using artiﬁcial evolution. Speciﬁcally, we study aggregation and coordinated motion of the swarm-bot using a physics-based simulation of the system. Experiments, using a simpliﬁed simulation model of the s-bots, show that evolution can discover simple but eﬀective controllers for both the aggregation and the coordinated motion of the swarm-bot. Analysis of the evolved controllers shows that they have properties of scalability, that is, they continue to be eﬀective for larger group sizes, and of generality, that is, they produce similar behaviors for conﬁgurations diﬀerent from those they were originally evolved for. The portability of the evolved controllers to real s-bots is tested using a detailed simulation model which has been validated against the real s-bots in a companion paper in this same special issue.},
+  year = {2004},
+  date = {2004-09-00 2004-09},
+  journalAbbreviation = {Autonomous Robots},
+  title = {Evolving Self-Organizing Behaviors for a Swarm-Bot},
+}
+@journalArticle{dorigoGuestEditorial2004,
+  url = {http://link.springer.com/10.1023/B:AURO.0000034008.48988.2b},
+  author = {Dorigo, Marco and Şahin, Erol},
+  accessDate = {2025-02-04 21:42:39},
+  key = {3KCSR9D7},
+  volume = {17},
+  publicationTitle = {Autonomous Robots},
+  issue = {2/3},
+  ISSN = {0929-5593},
+  language = {en},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {111-113},
+  DOI = {10.1023/B:AURO.0000034008.48988.2b},
+  year = {2004},
+  date = {2004-09-00 2004-09},
+  journalAbbreviation = {Autonomous Robots},
+  title = {Guest Editorial},
+}
+@conferencePaper{carpinUSARSimRobotSimulator2007,
+  url = {http://ieeexplore.ieee.org/document/4209284/},
+  proceedingsTitle = {Proceedings 2007 IEEE International Conference on Robotics and Automation},
+  author = {Carpin, Stefano and Lewis, Mike and Wang, Jijun and Balakirsky, Stephen and Scrapper, Chris},
+  conferenceName = {2007 IEEE International Conference on Robotics and Automation},
+  publisher = {IEEE},
+  accessDate = {2025-02-04 23:33:50},
+  ISBN = {978-1-4244-0602-9 978-1-4244-0601-2},
+  shortTitle = {USARSim},
+  extra = {ISSN: 1050-4729},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {1400-1405},
+  date = {2007-04-00 2007-04},
+  language = {en},
+  DOI = {10.1109/ROBOT.2007.363180},
+  abstractNote = {This paper presents USARSim, an open source high ﬁdelity robot simulator that can be used both for research and education. USARSim offers many characteristics that differentiates it from most existing simulators. Most notably, it constitutes the simulation engine used to run the Virtual Robots Competition within the Robocup initiative. We describe its general architecture, describe examples of utilization, and provide a comprehensive overview for those interested in robot simulations for education, research and competitions.},
+  year = {2007},
+  key = {BS56UZQR},
+  place = {Rome, Italy},
+  title = {USARSim: a robot simulator for research and education},
+}
+@preprint{dimmigSurveySimulatorsAerial2023,
+  url = {http://arxiv.org/abs/2311.02296},
+  archiveID = {arXiv:2311.02296},
+  extra = {arXiv:2311.02296 [cs]},
+  libraryCatalog = {arXiv.org},
+  author = {Dimmig, Cora A. and Silano, Giuseppe and McGuire, Kimberly and Gabellieri, Chiara and Hönig, Wolfgang and Moore, Joseph and Kobilarov, Marin},
+  accessDate = {2023-11-09 14:48:21},
+  language = {en},
+  abstractNote = {Uncrewed Aerial Vehicle (UAV) research faces challenges with safety, scalability, costs, and ecological impact when conducting hardware testing. High-ﬁdelity simulators offer a vital solution by replicating real-world conditions to enable the development and evaluation of novel perception and control algorithms. However, the large number of available simulators poses a signiﬁcant challenge for researchers to determine which simulator best suits their speciﬁc use-case, based on each simulator’s limitations and customization readiness. This paper analyzes existing UAV simulators and decision factors for their selection, aiming to enhance the efﬁciency and safety of research endeavors.},
+  repository = {arXiv},
+  year = {2023},
+  key = {RHBGCFVW},
+  date = {2023-11-03 2023-11-03},
+  title = {Survey of Simulators for Aerial Robots},
+}
+@bookSection{lacheleSwarmSimXRealTimeSimulation2012,
+  url = {http://link.springer.com/10.1007/978-3-642-34327-8_34},
+  date = {2012-00-00 2012},
+  publisher = {Springer Berlin Heidelberg},
+  accessDate = {2025-02-05 00:00:33},
+  ISBN = {978-3-642-34326-1 978-3-642-34327-8},
+  volume = {7628},
+  shortTitle = {SwarmSimX},
+  extra = {Series Title: Lecture Notes in Computer Science
+DOI: 10.1007/978-3-642-34327-8_34},
+  libraryCatalog = {DOI.org (Crossref)},
+  pages = {375-387},
+  author = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Doug and Vardi, Moshe Y. and Weikum, Gerhard and Noda, Itsuki and Ando, Noriaki and Brugali, Davide and Kuffner, James J. and Lächele, Johannes and Franchi, Antonio and Bülthoff, Heinrich H. and Robuffo Giordano, Paolo},
+  language = {en},
+  abstractNote = {In this paper we present a novel simulation environment called SwarmSimX with the ability to simulate dozens of robots in a realistic 3D environment. The software architecture of SwarmSimX allows new robots, sensors, and other libraries to be loaded at runtime, extending the functionality of the simulation environment signiﬁcantly. In addition, SwarmSimX allows an easy exchange of the underlying libraries used for the visual and physical simulation to incorporate diﬀerent libraries (e.g., improved or future versions). A major feature is also the possibility to perform the whole simulation in real-time allowing for human-in-the-loop or hardware-in-the-loop scenarios. SwarmSimX has been already employed in several works presenting haptic shared control of multiple mobile robots (e.g., quadrotor UAVs). Additionally, we present here two validation tests showing the physical ﬁdelity and the real-time performance of SwarmSimX. For the tests we used NVIDIA R © PhysX© R and Ogre3D as physics and rendering libraries, respectively.},
+  bookTitle = {Simulation, Modeling, and Programming for Autonomous Robots},
+  year = {2012},
+  key = {967BBGIU},
+  place = {Berlin, Heidelberg},
+  title = {SwarmSimX: Real-Time Simulation Environment for Multi-robot Systems},
+}
