--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -13,6 +13,11 @@ More simulatos in this paper: [@dimmigSurveySimulatorsAerial2023] and this table
 Some collections form my side:
 - [Genesis](https://genesis-world.readthedocs.io/en/latest/index.html#), paper [Genesis: A Generative and Universal Physics Engine for Robotics and Beyond](https://genesis-embodied-ai.github.io/)
 - SwarmSimX paper: [@lacheleSwarmSimXRealTimeSimulation2012]
+- [SAPIEN](https://sapien.ucsd.edu/)
+    - [Mani](https://maniskill.readthedocs.io/en/latest/)
+
+For wheel robots:
+- [MVSim](https://mvsimulator.readthedocs.io/en/latest/)
 
 ## External References
 
