update cpp notes structure

--- a/src/content/docs/en/cpp.mdx
+++ b/src/content/docs/en/cpp.mdx
@@ -15,116 +15,16 @@ Software requirements:
 - Text editor: [Visual Studio Code](https://code.visualstudio.com/) with the [C/C++ by Microsoft](https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools) extension.
 - Compiler: `gcc`, a reference article for installation, [Using GCC with MinGW](https://code.visualstudio.com/docs/cpp/config-mingw#_prerequisites).
 
-## The Build Process
+## Module 1 - Basics
 
-You've probably heard the terms `build` and `compile`, and even though they are different processes, they are actually used for the same thing, which is to convert source code into an executable binary.
+- [The build process](cpp-build)
+- [Basics of the language](cpp-basics)
+- [Standard Library (STL)](cpp-stl)
 
-There is (as far as I know) no general agreement or standard between `build` and `compile`, but in this case we will refer to these terms as two different things.
-- **compile**: convert source code to assembly code.
-- **build**: series of steps that are executed in sequence (among them, build and linking to name a few) that convert source code into executable binary.
+## Module 2 - Common Libraries
 
-<Drawio
-    file="cpp.drawio"
-    page="0"
-    description="Common build process for a `.cpp` file."
-/>
+- [List of common Libraries](cpp-libraries)
 
-You can run the full build process with the following command:
+## Module 3 - Extras
 
-<Terminal
-    title="Build a simple cpp file"
-    content="g++ main.cpp -o main"
-/>
-
-### Pre-processor
-
-<Definition
-    term="pre-processor"
-    definition="The preprocessor performs preliminary operations on C and C++ files before they are passed to the compiler."
-    source="C/C++ preprocessor reference"
-    link="https://learn.microsoft.com/en-us/cpp/preprocessor/c-cpp-preprocessor-reference?view=msvc-170"
-/>
-
-[Minimal example](https://github.com/harleylara/cpp-intro/blob/master/001-intro/main.cpp)
-<Terminal
-    title="Pre-process only"
-    content="g++ -E main.cpp > main.i"
-/>
-
-[Simple example](https://github.com/harleylara/cpp-intro/blob/master/001-intro/pre.cpp)
-<Terminal
-    title="Build simple macro example for logging"
-    content="g++ pre.cpp -DDEBUG=1 -o pre && ./pre"
-/>
-
-Use of macros in ROS: `rclcpp` debugging [RCLCPP_DEBUG](https://docs.ros2.org/latest/api/rclcpp/logging_8hpp.html#a44818c8a1fd292cd0e81759e956765d7).
-
-More about pre-processor in [Preprocessor directives](https://cplusplus.com/doc/tutorial/preprocessor/).
-
-### Compiler
-
-<Terminal
-    title="Compile only"
-    content="g++ -S main.i"
-/>
-
-### Assembler
-
-<Terminal
-    title="Assembly only"
-    content="g++ -c main.s"
-/>
-
-### Linker
-
-<Terminal
-    title="Linking only"
-    content="g++ main.o -o main"
-/>
-
-Demo minimal library:
-<Terminal
-    title="Compile and assemble, but do not link. (not yet)"
-    content="g++ -c simplelib.cpp -o simplelib.o"
-/>
-
-Compile your program and link the library:
-<Terminal
-    title="Compile the main program and link"
-    content="g++ link.cpp simplelib.o -o link && ./link"
-/>
-
-This was a `static library` example.
-
-## Build System: `CMake`
-
-A build system is a set of tools and practices used to automate the process of build source code into executable software, along with managing dependencies, configurations, and other tasks related to the software development process. Check this [list of build automation software](https://en.wikipedia.org/wiki/List_of_build_automation_software).
-
-<Drawio
-    file="cpp.drawio"
-    page="1"
-    description="Simple CMAKE build flow."
-/>
-
-[CMake Demo](https://github.com/harleylara/cpp-intro/blob/master/001-intro/CMakeLists.txt)
-
-<Terminal
-    title="Build with CMake"
-    content="mkdir build\
-cd build\
-cmake ..\
-make"
-/>
-
-Run executable
-<Terminal
-    title="Run demo linking"
-    content="./link"
-/>
-
-
-ROS use [colcon](https://colcon.readthedocs.io/en/released/) (collective construction): A `CLI` tool to build projects (python or cpp). `colcon` uses [ament_cmake](https://docs.ros.org/en/humble/How-To-Guides/Ament-CMake-Documentation.html) which is a wrapper around `CMAKE`.
-
-## External Resources
-
-- [CMake Tutorial](https://cmake.org/cmake/help/latest/guide/tutorial/index.html)
+- [Executable and Linking Format (ELF)](elf)
