--- a/src/content/docs/en/elf.mdx
+++ b/src/content/docs/en/elf.mdx
@@ -54,3 +54,7 @@ ELF Header:
 - [Tool Interface Standard (TIS), Executable and Linking Format (ELF) Specification](https://refspecs.linuxfoundation.org/elf/elf.pdf)
 - [Under the Hood of Executables](https://mohitmishra786.github.io/underTheHoodOfExecutables/)
 - [Shared Libraries: Understanding Dynamic Loading](https://amir.rachum.com/shared-libraries/)
+
+Videos:
+- [In-depth: ELF - The Extensible & Linkable Format](https://www.youtube.com/watch?v=nC1U1LJQL8o)
+- [ELF File Format Explained](https://www.youtube.com/watch?v=9uWMr3wdadM)
