update info for colcon

--- a/src/content/docs/en/ros2-nodes.mdx
+++ b/src/content/docs/en/ros2-nodes.mdx
@@ -97,7 +97,7 @@ In case you haven't wondered yet. You: *"Wait!?, my node is python, why do I nee
 
 The `--symlink-install` directive tells colcon not to perform a hard-copy (default behavior) but to perform a symlink of the files, this option is extremely useful when you are developing with python as it allows you to make changes to your file and because it is just a symbolic link the changes are automatically reflected from the file perspective in the `install` folder, which means that if you use `--symlink-install` you don't have to do `colcon build` for every time you change the file (example `bare.py`), but you have to redo `colcon build --symlink-install` **once** every time there is a new file, this is for the purpose of creating the symlink of the new file. e.g. a new node called `new.py` and then you can just keep changing the file since the symlink already exist.
 
-The symlink concept is not exclusive for nodes, but also applies to any type of shared resource such as launch files, configurations, urdfs etc. ~Just keep in mind that currently (January 2024) there are no mechanisms to create symlinks for the resources specified in the `setup.py` section `data_files` of your `ament_python`~. You can symlink data files in packages of type `ament_python`, thanks to the PR [Implement a custom distutils command to symlink data_files #592](https://github.com/colcon/colcon-core/pull/592)
+The symlink concept is not exclusive for nodes, but also applies to any type of shared resource such as launch files, configurations, urdfs etc. ~Just keep in mind that currently (January 2024) there are no mechanisms to create symlinks for the resources specified in the `setup.py` section `data_files` of your `ament_python`~. Since [`colcon-core`](https://github.com/colcon/colcon-core) version [`0.16.0`](https://github.com/colcon/colcon-core/milestone/66?closed=1) [`PR #592`](https://github.com/colcon/colcon-core/pull/592), you can symlink files declared in the `data_files` section of your `setup.py` in packages of type `ament_python`.
 
 ## Coding a Minimum Logger
 
