add references links

--- a/src/content/docs/en/ros2-launch.mdx
+++ b/src/content/docs/en/ros2-launch.mdx
@@ -6,3 +6,5 @@ description: The ROS 2 Launch system
 ## External Resources
 
 - [Why does the ROS2 Python launch files look like XML written in Python?](https://discourse.ros.org/t/why-does-the-ros2-python-launch-files-look-like-xml-written-in-python/23679)
+- [Launch Architecture](https://docs.ros.org/en/rolling/p/launch/architecture.html)
+- [ROS 2 Launch System - ROS 2 Design Document](https://design.ros2.org/articles/roslaunch.html)
