add link to a book on multi-robot on ros2

--- a/src/content/docs/en/multi-agent.mdx
+++ b/src/content/docs/en/multi-agent.mdx
@@ -69,4 +69,9 @@ See my notes on [Simulators](simulators).
 - [TeamBots](https://www.cs.cmu.edu/~trb/TeamBots/)
 - [Modular OpenRobots Simulation Engine](https://morse-simulator.github.io/)
 
+## External Resources to Check 🔍
+
+- [Programming Multiple Robots with ROS 2](https://osrf.github.io/ros2multirobotbook/intro.html)
+
+
 ## References
