--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -27,7 +27,7 @@ Content Outline:
 - [Topics](ros2-topics)
 - TBA [Services](ros2-services)
 - TBA [Actions](ros2-actions)
-- TBA [Parameters server](ros2-parameters)
+- [Arguments, ROS arguments and parameters](ros2-parameters)
 - [Launch System](ros2-launch)
 
 
