--- a/src/content/docs/en/ros2-launch.mdx
+++ b/src/content/docs/en/ros2-launch.mdx
@@ -3,8 +3,19 @@ title: ROS 2 Launch System
 description: The ROS 2 Launch system
 ---
 
+## The Bare Minimum
+
+```python filename="logger.py" remoteURL="https://raw.githubusercontent.com/harleylara/ros2-intro/master/launch_basics/launch/minimal.launch.py"
+```
+
+## Launch "Actions"
+
+`ExecuteProcess`
+
 ## External Resources
 
 - [Why does the ROS2 Python launch files look like XML written in Python?](https://discourse.ros.org/t/why-does-the-ros2-python-launch-files-look-like-xml-written-in-python/23679)
 - [Launch Architecture](https://docs.ros.org/en/rolling/p/launch/architecture.html)
 - [ROS 2 Launch System - ROS 2 Design Document](https://design.ros2.org/articles/roslaunch.html)
+- [`launch` - Github repo](https://github.com/ros2/launch/)
+- [`launch_ros` - Github repo](https://github.com/ros2/launch_ros/)
