--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -15,6 +15,7 @@ Some collections form my side:
 - SwarmSimX paper: [@lacheleSwarmSimXRealTimeSimulation2012]
 - [SAPIEN](https://sapien.ucsd.edu/)
     - [Mani](https://maniskill.readthedocs.io/en/latest/)
+- [AGX Dynamics](https://www.algoryx.se/agx-dynamics/) (comercial) by Algoryx
 
 For wheel robots:
 - [MVSim](https://mvsimulator.readthedocs.io/en/latest/)
