--- a/src/content/docs/en/ros2-description.mdx
+++ b/src/content/docs/en/ros2-description.mdx
@@ -1,6 +1,6 @@
 ---
-title: "URDF and Xacro"
-description: "The crazy world of URDF and Xacro"
+title: "Robot Description Formats"
+description: "The crazy world of formats"
 ---
 
 ## The Jungle of Formats
@@ -9,7 +9,9 @@ There are some many formats to represent robots (and other things):
 - URDF
     - [URDF improvements](https://discourse.ros.org/t/urdf-improvements/30520)
     - [Short-term WG about URDF / description formats](https://discourse.ros.org/t/short-term-wg-about-urdf-description-formats/30843)
+    - [xacro](https://wiki.ros.org/xacro) in [Github](https://github.com/ros/xacro)
 - [SDF](http://sdformat.org/)
+    - [SDFormat extensions to URDF](http://sdformat.org/tutorials?tut=sdformat_urdf_extensions&cat=specification&)
 - [Mujoco XML](https://mujoco.readthedocs.io/en/stable/XMLreference.html#introduction)
 - [Universal Scene Description (USD) or OpenUSD](https://openusd.org/release/index.html)
 
