--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -35,9 +35,9 @@ Content Outline:
 
 Intermediate - Tooling
 - Introduction to RVIZ
-- [Robot model definition - URDF and XACRO](ros2-urdf)
+- [Robot model description formats](ros2-description)
 - Transformations with TF2
-- Introduction to Gazebo
+- [Introduction to Gazebo](ros2-gazebo)
 - Building sim environment in Gazebo
 - Gazebo plugins ecosystem
 
